--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,144 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    font-family: Muli, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.sidebar-container {
+    position: fixed;
+    top: 0;
+    left: -300px;
+    margin-top: 5vh;
+    margin-bottom: 5vh;
+    width: 300px;
+    height: 90vh;
+    border-right: 1px solid rgba(128, 128, 128, 0.5);
+}
+
+.main-pic {
+    width: 30%;
+    border-radius: 100%;
+}
+
+.title-name {
+    font-size: 1.7rem;
+    font-weight: 300;
+}
+
+.title-subtitle {
+    font-size: 1.3rem;
+    font-weight: 300;
+    color: gray;
+}
+
+.nav-link {
+    font-size: 1.2rem;
+    font-weight: 400;
+}
+
+.content-container {
+    position: relative;
+    margin-left: 10vw;
+    margin-right: 10vw;
+    margin-top: 5vh;
+    margin-bottom: 5vh;
+    width: 80vw;
+}
+
+.home-title {
+    margin-top: 25vh;
+    margin-bottom: 3vh;
+    text-align: center;
+    font-size: 4rem;
+}
+
+.home-subtitle {
+    text-align: center;
+    margin-top: 0vh;
+    font-size: 2rem;
+    font-weight: 400;
+}
+
+.banner-pic {
+    width: 90%;
+    display: block;
+    margin: auto;
+    border-radius: 10px;
+}
+
+.section-title {
+    margin-left: 5%;
+    margin-right: 5%;
+    font-weight: 800;
+}
+
+.section-subtitle {
+    margin-left: 5%;
+    margin-right: 5%;
+    font-weight: 700;
+}
+
+.section-subsubtitle {
+    margin-left: 5%;
+    margin-right: 5%;
+    font-weight: 700;
+    margin-bottom: 0;
+}
+
+.section-text {
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+@media (min-width: 950px) {
+    .sidebar-container {
+        margin-left: 10vw;
+        left: 0;
+    }
+
+    .content-container {
+        margin-left: 10vw;
+        left: 300px;
+        margin-right: 10vw;
+        margin-top: 5vh;
+        margin-bottom: 5vh;
+        padding-left: 10px;
+        width: 60vw;
+    }
+
+    .banner-pic {
+        width: 80%;
+        display: block;
+        margin: auto;
+    }
+
+    .section-title {
+        margin-left: 10%;
+        margin-right: 10%;
+    }
+
+    .section-subtitle {
+        margin-left: 10%;
+        margin-right: 10%;
+    }
+
+    .section-subsubtitle {
+        margin-left: 10%;
+        margin-right: 10%;
+    }
+    
+    .section-text {
+        margin-left: 10%;
+        margin-right: 10%;
+    }
 }
