--- a/src/index.css
+++ b/src/index.css
@@ -111,6 +111,18 @@ code {
 .nav-link {
     font-size: 1.2rem;
     font-weight: 400;
+    color: black;
+    text-decoration: none;
+}
+
+.nav-link:hover {
+    text-decoration: underline;
+    color: #3232cc;
+}
+
+.nav-link-active {
+    font-weight: 700;
+    text-decoration: underline;
 }
 
 .content-container {
@@ -135,6 +147,43 @@ code {
     margin-top: 0vh;
     font-size: 2rem;
     font-weight: 400;
+}
+
+.home-button-div {
+    margin-top: 5vh;
+    margin-left: 10vw;
+    margin-right: 10vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.home-button {
+    font-family: 'Muli';
+    font-size: 1rem;
+    font-weight: 700;
+    width: 35%;
+    margin-left: 5px;
+    margin-right: 5px;
+    height: 5vh;
+    background-color: #008CBA;
+    color: white;
+    border: none;
+    border-radius: 1vh;
+    transition: background-color 0.3s;
+}
+
+.home-button:hover {
+    background-color: white;
+    color: black;
+    border: 2px solid #008CBA;
+    cursor: pointer;
+}
+
+.home-button:active {
+    background-color: #ba8b00;
+    color: black;
 }
 
 .banner-pic {
@@ -189,6 +238,10 @@ code {
         margin-bottom: 5vh;
         padding-left: 10px;
         width: 60vw;
+    }
+
+    .home-button-div {
+        flex-direction: row;
     }
 
     .banner-pic {
