--- a/src/index.css
+++ b/src/index.css
@@ -50,6 +50,11 @@ code {
     float: right;
 }
 
+.navbar-links {
+    text-align: center;
+    margin-top: 8vh;
+}
+
 
 .sidebar-container {
     position: fixed;
@@ -123,6 +128,25 @@ code {
 .nav-link-active {
     font-weight: 700;
     text-decoration: underline;
+}
+
+.navbar-item {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    color: white;
+    background-color: rgba(128, 128, 128, 0.9);
+    transition: background-color 0.5s;
+}
+
+.navbar-item:hover {
+    background-color: rgba(128, 128, 128, 1);
+}
+
+.nav-link-top {
+    font-size: 1.5rem;
+    font-weight: 400;
+    color: black;
+    text-decoration: none;
 }
 
 .content-container {
