--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    font-family: Muli, sans-serif;
+    font-family: Open Sans, Muli, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     overflow-x: hidden;
