--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    font-family: Muli, sans-serif;
+    font-family: Nunito, Muli, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     overflow-x: hidden;
@@ -107,18 +107,18 @@ a {
 }
 
 .title-name {
-    font-size: 1.7rem;
+    font-size: 1.8rem;
     font-weight: 300;
 }
 
 .title-subtitle {
-    font-size: 1.3rem;
+    font-size: 1.4rem;
     font-weight: 300;
     color: gray;
 }
 
 .nav-link {
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     font-weight: 400;
     color: black;
     text-decoration: none;
