--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@ a {
 }
 
 .navbar-container {
+    font-family: Muli;
     position: fixed;
     z-index: 2;
     top: 0;
@@ -227,6 +228,21 @@ a {
     margin: auto;
     border-radius: 10px;
     opacity: 0.9;
+}
+
+.centered-text {
+    background-color: white;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 10px;
+    opacity: 0.7;
+    font-family: Muli;
+    font-weight: 600;
+    font-size: 50px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .resume-title {
